changed concurrency to be global, using tempdir, using Path.of over Paths.get